[gd_scene load_steps=3 format=3 uid="uid://b5q8gkx7mjnlr"]

[ext_resource type="Script" uid="uid://cogxl60q4x8wo" path="res://Scenes/Credits/credits.gd" id="1_credits"]
[ext_resource type="AudioStream" uid="uid://l1rjxwvkv84r" path="res://Sound/Finale_Strings.mp3" id="2_22rij"]

[node name="Credits" type="Node2D"]
script = ExtResource("1_credits")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="ImageRect" type="TextureRect" parent="."]
offset_left = 30.0
offset_top = 60.0
offset_right = 546.0
offset_bottom = 588.0
expand_mode = 1
stretch_mode = 4

[node name="CreditsLabel" type="Label" parent="."]
offset_right = 489.0
offset_bottom = 2839.0
theme_override_font_sizes/font_size = 18
text = "JAILBREAK

Un juego de Leandro Zárate

DESARROLLO

Diseño y Programación
Leandro Zárate

Historia y Narrativa
Leandro Zárate

Arte Píxel Art creado con:

LibreSprite
libresprite.github.io
PyxelEdit
pyxeledit.com

Arte y Gráficos de Cinemáticas y Combates
Chatgpt
https://www.chatgpt.com
Google Gemini (Nano Banana)
https://gemini.google.com

Música compuesta con Beepbox
https://www.beepbox.co

Carusso, E. (1918). 
La Donna È Mobile, 
en Rigoletto, de Giuseppe Verdi 
[Schellac, 10\", 78 RPM, 
Single Sided, Repress]. 
EEUU: Victrola-87017.

Recuperado de:
https://es.wikipedia.org/wiki/La_donna_%C3%A8_mobile
Licencia: Dominio Público.

Punch, by qubodup
https://opengameart.org/
content/punch
Licencia: CC0 (Dominio Público)

3 Melee Sounds, by remaxim
https://opengameart.org/
content/3-melee-sounds
Licencia: CC0 (Dominio Público)

Crowd Shouting/Speaking Ambience,
by StarNinjas
https://opengameart.org/
content/crowd-shoutingspeaking-ambience
Licencia: CC0 (Dominio Público)

Metal Impact Sounds, by BMacZero
https://opengameart.org/
content/metal-impact-sounds
Licencia: CC0 (Dominio Público)

Swishes Sound Pack, by artisticdude
https://opengameart.org/
content/swishes-sound-pack
Licencia: CC0 (Dominio Público)

37 hits/punches, by qubodup
(Original: Independent.nu)
https://opengameart.org/
content/37-hitspunches
Licencia: CC0 (Dominio Público)

Knife Sharpening Slice 1, by qubodup
(Original: The Berklee College of Music)
https://opengameart.org/
content/knife-sharpening-slice-1
Licencia: CC-BY 3.0

Fleshy Fight Sounds, by will_leamon
https://opengameart.org/
content/fleshy-fight-sounds
Licencia: OGA-BY 3.0


UNIVERSIDAD NACIONAL DEL LITORAL
Facultad de Ingeniería y Ciencias Hídricas
(UNL-FICH)

Tecnicatura Superior en Diseño y
Programación de Videojuegos

Proyecto Final - Cohorte 2022




DOCENTES

Marcos Alberto Cabaña
Juan Ignacio Cargnel









AGRADECIMIENTOS ESPECIALES

A mi familia y amigos, por su apoyo incondicional
A los docentes por su guía y enseñanza
A todos los que probaron el juego

GRACIAS POR JUGAR




Presiona ESPACIO para volver al menú"
horizontal_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_22rij")
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
